# LW-BenchHub

./: .dockerignore  .dockerignore.ci  .gitignore  .gitmodules  CITATION.cff  README.md  ci_task_daily.txt  ci_tasks.txt  docker_ci_tasks.txt  env_install.logs  env_server.sh  eval.sh  eval_ppo.sh  eval_stats.py  example.sh  install-Cuda128.sh  install.sh  lerobot_eval.sh  openpi_rtx6000_eval_env_conda.txt  openpi_rtx6000_eval_env_pip.txt  parallel_eval.py  parallel_eval.yml  pyproject.toml  run_ci.sh  run_ci_post.sh  run_env.sh  run_init_docker.sh  runner.py  setup.py  summary.agent  teleop.sh  teleop_ci_libero_tasks.txt  teleop_ci_tasks.txt  train.sh  train_ppo.sh
.cache/: objcfgs_coffee_x7s_seed42.json
ci_run/: check_autopep8.py  check_consistency.py  check_format.py  ci_docker_image.txt  eval_policy.sh  replace_floor_plan_image.sh  replay.sh  replay_state_base.sh  teleop_ci.py  train_ci.sh
configs/envhub/: example.yml
configs/layout_task_mapping/: layout_task_mapping.csv
configs/policy/: g1-coffee.yml  lift-cube.yml  pnp-orange.yaml  pnp-orange.yml
docker/: Dockerfile  base-requirements-1.txt  base-requirements-2.txt  base-requirements-3.txt  base.dockerfile  build.sh  ci.dockerfile  environment.yml  malloc.dockerfile  release.dockerfile  release_build.sh  release_ci.dockerfile  release_docker_build.txt
eval_result/: eval_results.json
lw_benchhub/: __init__.py  interact_api.py
lw_benchhub/core/: __init__.py  context.py
lw_benchhub/data/: __init__.py
lw_benchhub/distributed/: base.py  ipc.py  proxy.py  restful.py  restful_proxy.py
lw_benchhub/eval_result/: eval_results.json
lw_benchhub/scripts/: env_server.py  install.sh  math_utils.py  replay.sh
lw_benchhub/utils/: common_utils.py  config_loader.py  csv_loader.py  decorators.py  env.py  envhub_utils.py  errors.py  find_asset.py  fixture_utils.py  gripper_utils.py  hdf5_utils.py  lerobot_utils.py  log_utils.py  monkey_patch.py  object_utils.py  opentelevision.py  profile_utils.py  render_utils.py  robocasa_utils.py  sine_wave_action_generator.py  teleop_utils.py  ui_utils.py  usd_utils.py  video_recorder.py  video_recorder.txt
lw_benchhub_rl/: __init__.py
lw_benchhub_tasks/: __init__.py  base_task.py
lwlab/core/: __init__.py  (+1 more)
lwlab_rl/: __init__.py
lwlab_tasks/: __init__.py  base_task.py
policy/: __init__.py  base.py
tasks/: base.py
(+978 files in other folders)
