[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "lw_benchhub"
version = "0.1.0"
description = "Isaac Lab based Benchmark for Robotics"
dependencies = [
    "lightwheel-sdk>=0.24",
    "pin-pink==3.1.0",
    "grpcio>1.73",
    "protobuf>6",
    "pynput",
    "mediapy",
    "tqdm",
    "vuer[all]==0.0.60",
    "onnxruntime",
    "zmq",
    "lazy-import",
]

[project.optional-dependencies]

lerobot = [
    "lerobot==0.3.3",
    "pyserial>=3.5",
    "deepdiff>=7.0.1,<9.0.0",
    "feetech-servo-sdk>=1.0.0"
]

[project.entry-points.lw_benchhub_modules]
lw_benchhub_scences = "lw_benchhub.core.scenes"
lw_benchhub_robots = "lw_benchhub.core.robots"
lw_benchhub_tasks = "lw_benchhub_tasks"
lw_benchhub_rl = "lw_benchhub_rl"